# Tbo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  deployment_guide.md  quick_start.md
examples/: agent_coordination_benchmark.py  production_deployment_example.py  research_collaboration_demo.py
research/: benchmark_datasets.py  validation_study.py
src/tboptimizer/: __init__.py
src/tboptimizer/core/: __init__.py  bandwidth_monitor.py  optimization_engine.py  temporal_analyzer.py
src/tboptimizer/integrations/: __init__.py  claude_adapter.py  generic_llm.py  openai_adapter.py
tests/: __init__.py  conftest.py  test_bandwidth_monitor.py  test_claude_adapter.py  test_optimization_engine.py
